--- a/src/Core/Resources/SharedResources.en.resx
+++ b/src/Core/Resources/SharedResources.en.resx
@@ -529,8 +529,8 @@
   <data name="NoSeatsAvailable" xml:space="preserve">
     <value>No seats available for organization, '{0}'</value>
   </data>
-  <data name="UserAlreadyInvited" xml:space="preserve">
-    <value>User, '{0}', has already been invited to this organization, '{1}'. Accept the invite in order to log in with SSO.</value>
+  <data name="AcceptInviteBeforeUsingSSO" xml:space="preserve">
+    <value>To accept your invite to {0}, you must first log in using your master password. Once your invite has been accepted, you will be able to log in using SSO.</value>
   </data>
   <data name="UserAlreadyExistsInviteProcess" xml:space="preserve">
     <value>You were removed from the organization managing single sign-on for your account. Contact the organization administrator for help regaining access to your account.</value>
@@ -540,7 +540,7 @@
   </data>
   <data name="RedirectGet" xml:space="preserve">
     <value>Redirect GET</value>
-    <comment>An OIDC Connect Redirect Behavior, Redirect; Emits a 302 response 
+    <comment>An OIDC Connect Redirect Behavior, Redirect; Emits a 302 response
     to redirect the user agent to the OpenID Connect provider using a GET request.</comment>
   </data>
   <data name="FormPost" xml:space="preserve">
