--- a/src/Core/Resources/ErrorMessages.en.resx
+++ b/src/Core/Resources/ErrorMessages.en.resx
@@ -3,7 +3,7 @@
 <root>
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:element name="root" msdata:IsDataSet="true">
-      
+
     </xsd:element>
   </xsd:schema>
   <resheader name="resmimetype">
@@ -18,34 +18,31 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ERR000" xml:space="preserve">
+  <data name="0000" xml:space="preserve">
     <value>An error has occurred.</value>
   </data>
-  <data name="ERR001" xml:space="preserve">
+  <data name="0002" xml:space="preserve">
     <value>Organization not found.</value>
   </data>
-  <data name="ERR002" xml:space="preserve">
-    <value>This organization cannot use policies.</value>
-  </data>
-  <data name="ERR003" xml:space="preserve">
+  <data name="0001" xml:space="preserve">
     <value>User not found.</value>
   </data>
-  <data name="ERR004" xml:space="preserve">
+  <data name="0404" xml:space="preserve">
     <value>Resource not found.</value>
   </data>
-  <data name="ERR005" xml:space="preserve">
+  <data name="0403" xml:space="preserve">
     <value>Invalid token.</value>
   </data>
-  <data name="ERR006" xml:space="preserve">
+  <data name="0401" xml:space="preserve">
     <value>Unauthorized.</value>
   </data>
-  <data name="ERR500" xml:space="preserve">
+  <data name="0500" xml:space="preserve">
     <value>An unhandled server error has occurred.</value>
   </data>
-  <data name="ERR007" xml:space="preserve">
-    <value>Trusted device encryption is on and requires this policy.</value>
-  </data>
-  <data name="ERR008" xml:space="preserve">
+  <data name="1001" xml:space="preserve">
     <value>Username or password is incorrect. Try again.</value>
+  </data>
+  <data name="1003" xml:space="preserve">
+    <value>Encryption key migration is required. Please log in to the web vault at</value>
   </data>
 </root>
